// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListCard > renders correctly 1`] = `
<v-card-stub
  border="false"
  data-v-f69dcac4=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <v-list-item-stub
    border="false"
    class="py-2 flex-grow-1 list-card__content"
    data-v-f69dcac4=""
    density="default"
    disabled="false"
    exact="false"
    lines="false"
    nav="false"
    replace="false"
    ripple="true"
    slim="false"
    tag="div"
    tile="false"
    variant="text"
  >
    <v-list-item-title-stub
      class="text-body-large font-weight-medium d-flex align-center"
      data-v-f69dcac4=""
      tag="div"
    >
      <span
        class="card-title"
        data-v-f69dcac4=""
      >
        This is a card title
      </span>
      
      
    </v-list-item-title-stub>
    <v-list-item-subtitle-stub
      class="mt-1 d-flex flex-wrap"
      data-v-f69dcac4=""
      tag="div"
    >
      
      <list-item-subtitle-content-stub
        allowmultiplelines="false"
        class="mr-4"
        data-v-f69dcac4=""
        icon=""
        primaryvalue="value 1"
        primaryvalueclass=""
        secondaryvalue=""
        secondaryvalueclass=""
        tertiaryvalue=""
        tertiaryvalueclass=""
        title="key 1"
      />
      <list-item-subtitle-content-stub
        allowmultiplelines="false"
        class="mr-4"
        data-v-f69dcac4=""
        icon=""
        primaryvalue="value 2"
        primaryvalueclass=""
        secondaryvalue=""
        secondaryvalueclass=""
        tertiaryvalue=""
        tertiaryvalueclass=""
        title="key 2"
      />
      <list-item-subtitle-content-stub
        allowmultiplelines="false"
        class="mr-4"
        data-v-f69dcac4=""
        icon=""
        primaryvalue="value 3"
        primaryvalueclass=""
        secondaryvalue=""
        secondaryvalueclass=""
        tertiaryvalue=""
        tertiaryvalueclass=""
        title="key 3"
      />
      
    </v-list-item-subtitle-stub>
  </v-list-item-stub>
</v-card-stub>
`;

exports[`ListCard > renders correctly with cardButtons array 1`] = `
<v-card-stub
  border="false"
  data-v-f69dcac4=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <div
    class="v-list-item v-theme--light v-list-item--density-default rounded-0 v-list-item--variant-text py-2 flex-grow-1 list-card__content"
    data-v-f69dcac4=""
  >
    
    <!---->
    <span
      class="v-list-item__underlay"
    />
    
    <div
      class="v-list-item__prepend"
    >
      <v-defaults-provider-stub
        defaults="[object Object]"
        disabled="false"
        root="false"
        scoped="false"
      >
        
        <span
          class="mr-4"
          data-v-f69dcac4=""
        >
          <v-icon-stub
            data-v-f69dcac4=""
            disabled="false"
            end="false"
            size="default"
            start="false"
            tag="i"
          >
            M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z
          </v-icon-stub>
          <!--v-if-->
        </span>
        
      </v-defaults-provider-stub>
      <div
        class="v-list-item__spacer"
      />
    </div>
    <div
      class="v-list-item__content"
      data-no-activator=""
    >
      <!---->
      <!---->
      
      <v-list-item-title-stub
        class="text-body-large font-weight-medium d-flex align-center"
        data-v-f69dcac4=""
        tag="div"
      >
        <span
          class="card-title"
          data-v-f69dcac4=""
        >
          This is a card title
        </span>
        
        
      </v-list-item-title-stub>
      <v-list-item-subtitle-stub
        class="mt-1 d-flex flex-wrap"
        data-v-f69dcac4=""
        tag="div"
      >
        
        <list-item-subtitle-content-stub
          allowmultiplelines="false"
          class="mr-4"
          data-v-f69dcac4=""
          icon=""
          primaryvalue="value 1"
          primaryvalueclass=""
          secondaryvalue=""
          secondaryvalueclass=""
          tertiaryvalue=""
          tertiaryvalueclass=""
          title="key 1"
        />
        <list-item-subtitle-content-stub
          allowmultiplelines="false"
          class="mr-4"
          data-v-f69dcac4=""
          icon=""
          primaryvalue="value 2"
          primaryvalueclass=""
          secondaryvalue=""
          secondaryvalueclass=""
          tertiaryvalue=""
          tertiaryvalueclass=""
          title="key 2"
        />
        <list-item-subtitle-content-stub
          allowmultiplelines="false"
          class="mr-4"
          data-v-f69dcac4=""
          icon=""
          primaryvalue="value 3"
          primaryvalueclass=""
          secondaryvalue=""
          secondaryvalueclass=""
          tertiaryvalue=""
          tertiaryvalueclass=""
          title="key 3"
        />
        
      </v-list-item-subtitle-stub>
      
    </div>
    <div
      class="v-list-item__append"
    >
      <v-defaults-provider-stub
        defaults="[object Object]"
        disabled="false"
        root="false"
        scoped="false"
      >
        
        <v-list-item-action-stub
          class="flex-row-reverse"
          data-v-f69dcac4=""
          end="false"
          start="false"
          tag="div"
        >
          
          <icon-with-tooltip-stub
            additionalclasses=""
            buttonsize="default"
            color=""
            data-v-f69dcac4=""
            icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
            iconclickedfn="[Function]"
            iconid=""
            iconsrc=""
            size="16"
            tooltiplocation="bottom"
            tooltiptext="Delete"
          />
          <icon-with-tooltip-stub
            additionalclasses="mr-2"
            buttonsize="default"
            color=""
            data-v-f69dcac4=""
            icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
            iconclickedfn="[Function]"
            iconid=""
            iconsrc=""
            size="16"
            tooltiplocation="bottom"
            tooltiptext="Edit"
          />
          
        </v-list-item-action-stub>
        <!--v-if-->
        
      </v-defaults-provider-stub>
      <div
        class="v-list-item__spacer"
      />
    </div>
  </div>
</v-card-stub>
`;

exports[`ListCard > renders correctly with cardButtons array in mobile view 1`] = `
<v-card-stub
  border="false"
  data-v-f69dcac4=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <div
    class="v-list-item v-theme--light v-list-item--density-default rounded-0 v-list-item--variant-text py-2 flex-grow-1 list-card__content"
    data-v-f69dcac4=""
  >
    
    <!---->
    <span
      class="v-list-item__underlay"
    />
    
    <div
      class="v-list-item__prepend"
    >
      <v-defaults-provider-stub
        defaults="[object Object]"
        disabled="false"
        root="false"
        scoped="false"
      >
        
        <span
          class="mr-4"
          data-v-f69dcac4=""
        >
          <v-icon-stub
            data-v-f69dcac4=""
            disabled="false"
            end="false"
            size="default"
            start="false"
            tag="i"
          >
            M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z
          </v-icon-stub>
          <!--v-if-->
        </span>
        
      </v-defaults-provider-stub>
      <div
        class="v-list-item__spacer"
      />
    </div>
    <div
      class="v-list-item__content"
      data-no-activator=""
    >
      <!---->
      <!---->
      
      <v-list-item-title-stub
        class="text-body-large font-weight-medium d-flex align-center"
        data-v-f69dcac4=""
        tag="div"
      >
        <span
          class="card-title"
          data-v-f69dcac4=""
        >
          This is a card title
        </span>
        
        
      </v-list-item-title-stub>
      <v-list-item-subtitle-stub
        class="mt-1 d-flex flex-wrap"
        data-v-f69dcac4=""
        tag="div"
      >
        
        <list-item-subtitle-content-stub
          allowmultiplelines="false"
          class="mr-4"
          data-v-f69dcac4=""
          icon=""
          primaryvalue="value 1"
          primaryvalueclass=""
          secondaryvalue=""
          secondaryvalueclass=""
          tertiaryvalue=""
          tertiaryvalueclass=""
          title="key 1"
        />
        <list-item-subtitle-content-stub
          allowmultiplelines="false"
          class="mr-4"
          data-v-f69dcac4=""
          icon=""
          primaryvalue="value 2"
          primaryvalueclass=""
          secondaryvalue=""
          secondaryvalueclass=""
          tertiaryvalue=""
          tertiaryvalueclass=""
          title="key 2"
        />
        <list-item-subtitle-content-stub
          allowmultiplelines="false"
          class="mr-4"
          data-v-f69dcac4=""
          icon=""
          primaryvalue="value 3"
          primaryvalueclass=""
          secondaryvalue=""
          secondaryvalueclass=""
          tertiaryvalue=""
          tertiaryvalueclass=""
          title="key 3"
        />
        
      </v-list-item-subtitle-stub>
      
    </div>
    <div
      class="v-list-item__append"
    >
      <v-defaults-provider-stub
        defaults="[object Object]"
        disabled="false"
        root="false"
        scoped="false"
      >
        
        <v-list-item-action-stub
          data-v-f69dcac4=""
          end="false"
          start="false"
          tag="div"
        >
          <menu-with-button-activator-stub
            buttonclasses=""
            buttonicon="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
            buttoniconcolor="secondary-dark"
            buttontype="primary"
            closeoncontentclick="true"
            data-v-f69dcac4=""
            hascheckbox="false"
            iconkey="icon"
            issingleselect="false"
            items="[object Object],[object Object]"
            listwidth="auto"
            location="top"
            primarytextfield="text"
            secondarytextfield=""
            tertiarytextfield=""
            value=""
            valuekey=""
          />
        </v-list-item-action-stub>
        <!--v-if-->
        
      </v-defaults-provider-stub>
      <div
        class="v-list-item__spacer"
      />
    </div>
  </div>
</v-card-stub>
`;

exports[`ListCard > renders correctly with flag icon 1`] = `
<v-card-stub
  border="false"
  data-v-f69dcac4=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <v-list-item-stub
    border="false"
    class="py-2 flex-grow-1 list-card__content"
    data-v-f69dcac4=""
    density="default"
    disabled="false"
    exact="false"
    lines="false"
    nav="false"
    replace="false"
    ripple="true"
    slim="false"
    tag="div"
    tile="false"
    variant="text"
  >
    <v-list-item-title-stub
      class="text-body-large font-weight-medium d-flex align-center"
      data-v-f69dcac4=""
      tag="div"
    >
      <span
        class="card-title"
        data-v-f69dcac4=""
      >
        This is a card title
      </span>
      
      
    </v-list-item-title-stub>
    <v-list-item-subtitle-stub
      class="mt-1 d-flex flex-wrap"
      data-v-f69dcac4=""
      tag="div"
    >
      
      <list-item-subtitle-content-stub
        allowmultiplelines="false"
        class="mr-4"
        data-v-f69dcac4=""
        icon=""
        primaryvalue="value 1"
        primaryvalueclass=""
        secondaryvalue=""
        secondaryvalueclass=""
        tertiaryvalue=""
        tertiaryvalueclass=""
        title="key 1"
      />
      <list-item-subtitle-content-stub
        allowmultiplelines="false"
        class="mr-4"
        data-v-f69dcac4=""
        icon=""
        primaryvalue="value 2"
        primaryvalueclass=""
        secondaryvalue=""
        secondaryvalueclass=""
        tertiaryvalue=""
        tertiaryvalueclass=""
        title="key 2"
      />
      <list-item-subtitle-content-stub
        allowmultiplelines="false"
        class="mr-4"
        data-v-f69dcac4=""
        icon=""
        primaryvalue="value 3"
        primaryvalueclass=""
        secondaryvalue=""
        secondaryvalueclass=""
        tertiaryvalue=""
        tertiaryvalueclass=""
        title="key 3"
      />
      
    </v-list-item-subtitle-stub>
  </v-list-item-stub>
</v-card-stub>
`;
